# cli-utils

bash/: texifier
python/: pyproject.toml  texify  ws-cli  ws-maker
python/src/custom_cli_utils/: ocr_page.py  texify.py  ws_cli.py  ws_maker.py
python/src/custom_cli_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
